<?xml version="1.0"?>
<package format="2">
  <name>esim</name>
  <version>0.0.0</version>
  <description>Event camera simulator, which can simulate events from a stream of images samplet at high frequency.</description>

  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>esim_common</depend>
  <depend>esim_data_provider</depend>
  <depend>esim_visualization</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>

</package>
