<?xml version="1.0"?>
<package format="2">
  <name>esim_common</name>
  <version>0.0.0</version>
  <description>Common data types and utils for the event camera simulator.</description>

  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>ze_common</depend>
  <depend>ze_cameras</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>

</package>
