<?xml version="1.0"?>
<package format="2">
  <name>esim_trajectory</name>
  <version>0.0.0</version>
  <description>Trajectory generators for the event camera simulator.</description>

  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>esim_common</depend>
  <depend>ze_vi_simulation</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>

</package>
