<?xml version="1.0"?>
<package format="2">
  <name>esim_visualization</name>
  <version>0.0.0</version>
  <description>Visualizers for the event camera simulator.</description>

  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>esim_common</depend>
  <depend>esim_msgs</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>minkindr_conversions</depend>
  <depend>rosbag</depend>
  <depend>rospy</depend>
  <depend>dvs_renderer</depend>

</package>
