<?xml version="1.0"?>
<package format="2">
  <name>imp_opengl_renderer</name>
  <version>0.0.0</version>
  <description>OpenGL based rendering engine.</description>

  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>esim_common</depend>
  <depend>esim_rendering</depend>
  <depend>ze_common</depend>
  <depend>ze_cameras</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>assimp_catkin</depend>

</package>
